[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = "0.11"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#profile-settings
# https://github.com/johnthagen/min-sized-rust
opt-level = 3    # all optimizations
strip     = true # Automatically strip symbols from the binary. (Huge improvement)
lto       = true # Link-Time Optimization
codegen-units = 1
panic = "abort"
